# abspy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  benchmark.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: draft-pdf.yml  python-publish.yml  tests.yml
absp/: complex.py  graph.py  primitive.py
abspy/: README.md  __init__.py  complex.py  graph.py  logger.py  primitive.py  version.py
docs/: requirements.txt  vertexgroup.md
docs/source/: api.rst  conf.py  index.rst  tutorials.md  vertexgroup.md
examples/: intersection.ipynb  orientation-notes.txt
joss/: paper.bib  paper.md
misc/: benchmark.py
pyabsp/: __init__.py  graph.py
tests/: test_combined.py  test_complex.py  test_graph.py  test_primitive.py
tests/test_data/: test_graph.adjlist  test_mesh.ply  test_points.bvg  test_points.vg  test_sdf.npy
tests/test_output/: cells.plm  colours.mtl  primitives_bounds.npy  primitives_planes.npy
tutorials/: README.md  benchmark.py  tutorial_combined.py  tutorial_complex.py  tutorial_graph.py  tutorial_primitive.py
tutorials/data/: test_church.bvg  test_church.vg  test_sdf.npy
