[metadata]
name = abspy
version = 0.1.2
author = Zhaiyu Chen
author_email = zhaiyu.chen@outlook.com
description = A Python tool for 3D adaptive binary space partitioning and beyond
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chenzhaiyu/abspy
project_urls =
    Bug Tracker = https://github.com/chenzhaiyu/abspy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
   abspy = abspy
packages = find:
python_requires = >=3.6

